// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a CheckboxBase in error 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-95 MuiCheckbox-root makeStyles-root-87 makeStyles-root-88 MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
    data-id="checkboxBase"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        class="PrivateSwitchBase-input-98"
        data-indeterminate="false"
        id="checkboxInput"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m2-2H3v18h18V3z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;

exports[`it renders a checked CheckboxBase 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-52 MuiCheckbox-root makeStyles-root-44 makeStyles-root-45 MuiCheckbox-colorSecondary PrivateSwitchBase-checked-53 Mui-checked MuiIconButton-colorSecondary"
    data-id="checkboxBase"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input-55"
        data-indeterminate="false"
        id="checkboxInput"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 3H3v18h18V3zM10 17l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;

exports[`it renders a disabled CheckboxBase 1`] = `
<div>
  <span
    aria-disabled="true"
    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-138 MuiCheckbox-root makeStyles-root-130 makeStyles-root-131 MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-140 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
    data-id="checkboxBase"
    tabindex="-1"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        class="PrivateSwitchBase-input-141"
        data-indeterminate="false"
        disabled=""
        id="checkboxInput"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m2-2H3v18h18V3z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`it renders an unchecked CheckboxBase 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-9 MuiCheckbox-root makeStyles-root-1 makeStyles-root-2 MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
    data-id="checkboxBase"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        class="PrivateSwitchBase-input-12"
        data-indeterminate="false"
        id="checkboxInput"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m2-2H3v18h18V3z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;
